# eliza-engine

./: README.md  app.py  eliza.py  main.py  pyproject.toml  validator.py
scripts/: buddha.json  confucio.json  darwin.json  davinci.json  einstein.json  eliza.json  freud.json  galilei.json  gandhi.json  jesus.json  jobs.json  king.json  marx.json  nietzsche.json  socrates.json  sun_tzu.json  yoda.json
